# genetic_optimization

./: Cargo.toml  README.md  params.txt
src/: chromosome.rs  gene.rs  genome.rs  lib.rs  main.rs  main.rs.txt  sim.rs
