[package]
name = "genetic_optimization"
version = "0.2.0"
edition = "2021"
description = "Library for solving optimzation problems with a genetic algorithm."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.7.6"
threadpool = "1.8.1"